# GaPidTuner

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  README.md
scripts/: lint.bat
src/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  pch.h
src/ga/: core.h  fitness_function.cu  fitness_function.cuh  ga.cpp  ga.h  ga_core.h  ga_gpu.cu  ga_gpu.h
src/model/: circular_index.cuh  model.cpp  model.cu  model.cuh  model.h  piv.cuh  piv.hpp  plant.cuh  plant.hpp
src/utility/: accumulator.hpp  bit_cast.cuh  cuda_core.cuh  parallel.cpp  parallel.hpp  random.hpp  redomain.cuh  redomain.hpp  timer.h  timer.hpp  type_bits.h  typebits.h
